likvidiran bug s kartom u odabiru

--- a/ppij_web_aplikacija/Views/Instrukcije/Instrukcija.cshtml
+++ b/ppij_web_aplikacija/Views/Instrukcije/Instrukcija.cshtml
@@ -167,8 +167,8 @@
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Karta</h4>
                     </div>
-                    <div class="modal-body">
-                        <div id="mapid"></div>
+                    <div class="modal-body" style="height:293px;">
+                        <div id="mapid" style="height:100%;"></div>
                         
                     </div>
                     <div class="modal-footer">
