--- a/ppij_web_aplikacija/Views/Profil/Index.cshtml
+++ b/ppij_web_aplikacija/Views/Profil/Index.cshtml
@@ -86,7 +86,7 @@
                                             <div style="width:950px;">
                                                 <div>
                                                     <div class="col-md-2 prihvati-lijevo">
-                                                        <input onclick="dodajindex(11);" type="submit" class="btn btn-default " style="font-weight: bold;" value="Prihvati izmjene &raquo;" /> <br />
+                                                        <input onclick="dodajindex(11);" type="submit" class="btn btn-default prihvati" style="font-weight: bold;" value="Prihvati izmjene &raquo;" /> <br />
                                                     </div>
 
                                                     <table id ="dogovori1" class="table-bordered tablesorter table table-striped header-fixed">
@@ -197,7 +197,7 @@
                                             </div>
                                             @Html.HiddenFor(model => model.trenutniTab, new { id = "trenutniTab11" })
                                             <div class="col-md-2 mali-razmak-gore prihvati-lijevo">
-                                                <input onclick="dodajindex(11);" type="submit" class="btn btn-default " style="font-weight: bold;" value="Prihvati izmjene &raquo;" /><br />
+                                                <input onclick="dodajindex(11);" type="submit" class="btn btn-default prihvati " style="font-weight: bold;" value="Prihvati izmjene &raquo;" /><br />
                                             </div>
                                         </form>
                                     </fieldset>
@@ -213,7 +213,7 @@
                                             <div style="width:950px;">
                                                 <div>
                                                     <div class="col-md-2 prihvati-lijevo">
-                                                        <input onclick="dodajindex(12);" type="submit" class="btn btn-default" style="font-weight: bold;" value="Prihvati izmjene &raquo;" /> <br />
+                                                        <input onclick="dodajindex(12);" type="submit" class="btn btn-default prihvati" style="font-weight: bold;" value="Prihvati izmjene &raquo;" /> <br />
                                                     </div>
 
                                                     <table id ="dogovori2" class="table-bordered tablesorter table table-striped header-fixed" id="tabledatainstruktori">
@@ -322,7 +322,7 @@
                                             </div>
                                             @Html.HiddenFor(model => model.trenutniTab, new { id = "trenutniTab12" })
                                             <div class="col-md-2 mali-razmak-gore prihvati-lijevo">
-                                                <input onclick="dodajindex(12);" type="submit" class="btn btn-default " style="font-weight: bold;" value="Prihvati izmjene &raquo;" /><br />
+                                                <input onclick="dodajindex(12);" type="submit" class="btn btn-default prihvati" style="font-weight: bold;" value="Prihvati izmjene &raquo;" /><br />
                                             </div>
                                         </form>
                                     </fieldset>
@@ -390,7 +390,7 @@
                                             <form class="form-horizontal " method="post">
                                                 <div class="col-md-5 ">
                                                     <h3>Odaberite termine u kojima želite davati instrukcije</h3>
-                                                    <input onclick="addterminmodel(22);" type="submit" class="btn btn-default" style="font-weight:bold; margin-left:700px;" value="Promjeni &raquo;" /> <br />
+                                                    <input onclick="addterminmodel(22);" type="submit" class="btn btn-default prihvati" style="font-weight:bold; margin-left:700px;" value="Promjeni &raquo;" /> <br />
                                                 </div>
                                                 <div style="width:800px;">
                                                     <table id="termini" class="table-bordered tablesorter table table-striped header-fixed">
@@ -413,7 +413,7 @@
                                                 @Html.HiddenFor(model => model.trenutniTab, new { id = "trenutniTab22" })
 
                                                 <div class="col-md-2 mali-razmak-gore">
-                                                    <input onclick="addterminmodel(22);" type="submit" class="btn btn-default" style="font-weight:bold; margin-left:700px;" value="Promjeni &raquo;" /> <br />
+                                                    <input onclick="addterminmodel(22);" type="submit" class="btn btn-default prihvati" style="font-weight:bold; margin-left:700px;" value="Promjeni &raquo;" /> <br />
                                                 </div>
                                             </form>
                                         </fieldset>
@@ -445,7 +445,7 @@
                                         <mark>Želim biti instruktor</mark>
                                     </label>
                                     <div id="jeinstruktor" class="col-md-6">
-                                        @Html.CheckBoxFor(model => model.ostalePostavke.instruktor)
+                                        @Html.CheckBoxFor(model => model.ostalePostavke.instruktor, new { id = "zelimBitiInstruktorID", @onclick = "provjeriJeLiMoguce(this)" })
                                     </div>
                                 </div>
                                 @Html.HiddenFor(model => model.mojeVlastiteInstrukcije.MojeLokacijeJson, new { id = "jsonlokacije" })
@@ -462,7 +462,7 @@
 
                                 <div class="row">
                                     <div class="col-md-2 mali-razmak-gore">
-                                        <input onclick="dodajlokacijeumodel(3);" type="submit" class="btn btn-default" value="Promjeni &raquo;" /> <br />
+                                        <input onclick="dodajlokacijeumodel(3);" type="submit" class="btn btn-default prihvati" value="Promjeni &raquo;" /> <br />
                                     </div>
                                 </div>
                                 @Html.HiddenFor(model => model.trenutniTab, new { id = "trenutniTab3" })
@@ -519,7 +519,7 @@
                                 <br />
                                 @Html.HiddenFor(model => model.trenutniTab, new { id = "trenutniTab4" })
                                 <div class="col-md-2 mali-razmak-gore">
-                                    <input onclick="dodajindex(4);" type="submit" class="btn btn-default" value="Promjeni &raquo;" /> <br />
+                                    <input onclick="dodajindex(4);" type="submit" class="btn btn-default prihvati" value="Promjeni &raquo;" /> <br />
                                 </div>
                             </form>
                         </fieldset>
@@ -625,20 +625,10 @@
                     mcontent = mcontent.substr(0, mcontent.indexOf("<"));
                     document.getElementById("popislokacija").innerHTML += '<li id="lilok'+maxIdkarte+'"><label id="labellok'+maxIdkarte+'" for="opislok'
                                     +maxIdkarte+'">Opis lokacije šif. '+maxIdkarte
-                                        +' : </label><input type="text" id="opislok' +maxIdkarte+ '" value="'+mcontent+'">' + '</input></li>';
-                    var broj = maxIdkarte;
-                    $("#opislok" +broj).on("change", function (){
-                        for(var j = 0; j<popismarkeranakarti.length;j++){
-                            if(popismarkeranakarti[j].id == broj){
-                                popismarkeranakarti[j].marker.getPopup().setContent('<p>'+$("#opislok" +broj).val()+'</p></br><input type="button" value="Ukloni lokaciju" class="marker-delete-button"/>');
-                                var setopis = '<label id="labellok'+broj+'" for="opislok'+broj+'">Opis lokacije šif. '+broj+' : </label><input type="text" id="opislok' +broj+ '" value="'+$("#opislok" +broj).val()+'">' + '</input>';
-                                var li = document.getElementById("lilok"+broj).innerHTML = setopis;
-                                break;
-                            }
-                        }
-                    });
+                                        +' : </label><input type="text"  onchange="onmarkerchange(this)" id="opislok' +maxIdkarte+ '" value="'+mcontent+'">' + '</input></li>';
                     marker.addTo(mymap);
                 }
+
 
                 function onPopupOpen() {
                     var tempMarker = this;
@@ -679,12 +669,33 @@
                         }
                         marker = L.marker([listamarkera.lokacije[i].lat, listamarkera.lokacije[i].lon], {title: "Lokacija šif. " + listamarkera.lokacije[i].id} ).bindPopup("<p>" + listamarkera.lokacije[i].opis + "</p></br><input type='button' value='Ukloni lokaciju' class='marker-delete-button'/>");
                         marker.on("popupopen", onPopupOpen);
-                        document.getElementById("popislokacija").innerHTML += '<li id="lilok'+listamarkera.lokacije[i].id+'"><label id="labellok'+listamarkera.lokacije[i].id+'" for="opislok'+listamarkera.lokacije[i].id+'">Opis lokacije šif. '+listamarkera.lokacije[i].id+' : </label><input type="text" id="opislok' +listamarkera.lokacije[i].id+ '" value="'+listamarkera.lokacije[i].opis +'">' + '</input></li>';
+                        document.getElementById("popislokacija").innerHTML += '<li id="lilok'+listamarkera.lokacije[i].id+'"><label id="labellok'+listamarkera.lokacije[i].id+'" for="opislok'+listamarkera.lokacije[i].id+'">Opis lokacije šif. '+listamarkera.lokacije[i].id+' : </label><input type="text" onchange="onmarkerchange(this)" id="opislok' +listamarkera.lokacije[i].id+ '" value="'+listamarkera.lokacije[i].opis +'">' + '</input></li>';
 
                         popismarkeranakarti.push(new idmarkerKarta(listamarkera.lokacije[i].id, marker));
                         marker.addTo(mymap);
                     }
                 }
+
+                function onmarkerchange(th){
+                    for(var j = 0; j<popismarkeranakarti.length;j++){
+                        if(popismarkeranakarti[j].id == th.id.substring(7, th.id.length)){
+                            popismarkeranakarti[j].marker.getPopup().setContent('<p>'+th.value+'</p></br><input type="button" value="Ukloni lokaciju" class="marker-delete-button"/>');
+                            var setopis = '<label id="labellok'+th.id.substring(7, th.id.length)+'" for="'+th.id+'">Opis lokacije šif. '+th.id.substring(7, th.id.length)+' : </label><input type="text" id="'+th.id+'" value="'+th.value+'">' + '</input>';
+                            document.getElementById("lilok"+th.id.substring(7, th.id.length)).innerHTML = setopis;
+                            break;
+                        }
+                    }
+                }
+
+
+                function provjeriJeLiMoguce(t){
+                    if(t != null && t.value == 'true' && popismarkeranakarti.length == 0){
+                        alert("Ukoliko želite biti instruktor morate dodati barem jednu lokaciju");
+                        t.value = false;
+                        t.checked = false;
+                    }
+                }
+
 
             </script>
 
