--- a/ppij_web_aplikacija/Views/Profil/Index.cshtml
+++ b/ppij_web_aplikacija/Views/Profil/Index.cshtml
@@ -8,6 +8,9 @@
     <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
     <link href="~/Content/predmeti.css" rel="stylesheet" />
     <link href="~/Content/profil.css" rel="stylesheet" />
+    <script src="~/Content/sweetalert/dist/sweetalert.min.js"></script>
+    <link href="~/Content/sweetalert/dist/sweetalert.css" rel="stylesheet" />
+
 </head>
 <body>
     <div class="container">
@@ -128,7 +131,11 @@
                                                                             if (@Model.mojeVlastiteInstrukcije.dogovoreni_termini_kao_klijent[i].termin.dogovor_status == 1 || @Model.mojeVlastiteInstrukcije.dogovoreni_termini_kao_klijent[i].termin.dogovor_status == 11) {
                                                                                 <label class="control-label" for="ocjena">Ocjenite:</label>
                                                                                 <div id="ocjena" class="col-md-5">
-                                                                                    @Html.TextBoxFor(model => model.mojeVlastiteInstrukcije.dogovoreni_termini_kao_klijent[i].termin.dogovor_ocijena)
+                                                                                    @Html.RadioButtonFor(model => model.mojeVlastiteInstrukcije.dogovoreni_termini_kao_klijent[i].termin.dogovor_ocijena, 1) 1
+                                                                                    @Html.RadioButtonFor(model => model.mojeVlastiteInstrukcije.dogovoreni_termini_kao_klijent[i].termin.dogovor_ocijena, 2) 2
+                                                                                    @Html.RadioButtonFor(model => model.mojeVlastiteInstrukcije.dogovoreni_termini_kao_klijent[i].termin.dogovor_ocijena, 3) 3
+                                                                                    @Html.RadioButtonFor(model => model.mojeVlastiteInstrukcije.dogovoreni_termini_kao_klijent[i].termin.dogovor_ocijena, 4) 4
+                                                                                    @Html.RadioButtonFor(model => model.mojeVlastiteInstrukcije.dogovoreni_termini_kao_klijent[i].termin.dogovor_ocijena, 5) 5
                                                                                 </div>
                                                                             } else if (@Model.mojeVlastiteInstrukcije.dogovoreni_termini_kao_klijent[i].termin.dogovor_status == 10) {
                                                                                 <p>Nije odgovoreno</p>
@@ -936,29 +943,52 @@
             <script>
                 $(document).on('click', '.Delete', function(e){
                     e.preventDefault();
-                    if(confirm("Jeste li sigurni da želite obrisati predmet?")){
-                        var $el = $(this);
-                        $edit = $el.closest("tr").find(".Edit");
-                        $(this).prop("disabled", true);
-                        $edit.prop("disabled", true);
-                        $ajaxLoad = $el.closest("tr").find(".ajax-load");
-                        $ajaxLoad.fadeIn(300);
-                        $.ajax({
-                            url: '/Profil/Delete',
-                            type: 'POST',
-                            async: true,
-                            data: {id: $(this).attr("value") },
-                            error: function(){
-                                $el.prop("disabled", false);
-                                $edit.prop("disabled", false);
-                                alert("Greška pri brisanju predmeta!");
-                                $ajaxLoad.fadeOut(300);
-                            },
-                            success: function () {
-                                $el.closest("tr").fadeOut(200);
-                            }
-                        });
-                    }
+                    
+                    var $el = $(this);
+                    $edit = $el.closest("tr").find(".Edit");
+                    $ajaxLoad = $el.closest("tr").find(".ajax-load");
+                    swal({
+                        title: "Brisanje predmeta",
+                        text: "Jeste li sigurni da želite obrisati predmet?",
+                        type: "warning",
+                        showCancelButton: true,
+                        confirmButtonClass: "btn-danger",
+                        confirmButtonText: "Da, obriši predmet!",
+                        cancelButtonText: "Ne, Otkaži brisanje!",
+                        closeOnConfirm: false,
+                        closeOnCancel: false
+                    },
+                    function(isConfirm) {
+                        if (isConfirm) {
+                            $el.prop("disabled", true);
+                            $edit.prop("disabled", true);
+                            $ajaxLoad.fadeIn(300);
+
+                            $.ajax({
+                                url: '/Profil/Delete',
+                                type: 'POST',
+                                async: true,
+                                data: {id: $el.attr("value") },
+                                error: function(){
+                                    $el.prop("disabled", false);
+                                    $edit.prop("disabled", false);
+                                    swal("Greška!", "Greška pri brisanju predmeta.", "error")
+                                    $ajaxLoad.fadeOut(300);
+                                },
+                                success: function () {
+                                    swal("Obrisano", "Predmet je obrisan.", "success");
+                                    $el.closest("tr").fadeOut(200);
+                                }
+                            });
+
+                        } else {
+                            swal("Otkazano", "Predmet je siguran :)", "error");
+                            $ajaxLoad.fadeOut(300);
+                            $el.prop("disabled", false);
+                            $edit.prop("disabled", false);
+                        }
+                    });
+                    
                 });
             </script>
 
@@ -988,12 +1018,12 @@
                     nazivPredmeta = tr.find(".predmetIme").val();
                     cijenaPredmeta = tr.find(".predmetCijena").val();
                     if(nazivPredmeta.length <= 0 || cijenaPredmeta.length <= 0){
-                        alert("Unesite ime predmeta i cijenu!");
+                        swal("Neispravni podatci", "Unesite ime predmeta i cijenu", "error");
                         return;
                     }
                     else if(parseFloat(cijenaPredmeta).toFixed(2) < 0.00 || parseFloat(cijenaPredmeta).toFixed(2) > 9999.99){
                 
-                        alert("Cijena mora biti između 0 i 9999.99 HRK");
+                        swal("Neispravni podatci", "Cijena mora biti između 0 i 9999.99 HRK", "error");
                         return;
 }
                     $button = $(this);
@@ -1020,7 +1050,8 @@
                         success: function(res){
                             if(res == null){
                                 //internal error
-                                alert("Greška pri stvaranju novog predmeta.")
+                                
+                                swal("Greška!", "Greška pri stvaranju novog predmeta.", "error")
                                 $button.prop("disabled", false);
                                 $edit.prop("disabled", false);
                                 ajaxLoad.fadeOut(300);
@@ -1041,11 +1072,13 @@
                     var tr = $(this).closest("tr");
                     cijenaPredmet = tr.find(".predmetCijena").val();
                     if(cijenaPredmet.length <= 0){
-                        alert("Unesite cijenu!");
+                        
+                        swal("Neispravni podatci", "Molimo unesite cijenu predmeta", "error")
                         return;
                     }else if(parseFloat(cijenaPredmet).toFixed(2) < 0.00 || parseFloat(cijenaPredmet).toFixed(2) > 9999.99){
                 
-                        alert("Cijena mora biti između 0 i 9999.99 HRK");
+                        
+                        swal("Neispravni podatci", "Cijena mora biti između 0 i 9999.99 HRK", "error");
                         return;
                     }
                     ajaxLoad = tr.find(".ajax-load-add");
@@ -1069,14 +1102,14 @@
 
                         success: function(res){
                             if(parseInt(res) == -1){
-                                alert("Već držite instrukcije za odobrani predmet.");
+                                swal("Duplikat", "Već držite instrukcije za odabrani predmet.", "error");
                                 $button.prop("disabled", false);
                                 ajaxLoad.fadeOut(300);
 
                             }
                             else if(!res){
                                 //internal error
-                                alert("Greška pri dodavanju predmeta.");
+                                swal("Greška!", "Greška pri dodavanju predmeta.", "error")
                                 $button.prop("disabled", false);
                                 ajaxLoad.fadeOut(300);
                             }
@@ -1115,11 +1148,11 @@
 
 
                     if(novaCijena.length <= 0){
-                        alert("Unesite novu cijenu prije pohrane.");
+                        swal("Neispravni podatci", "Unesite cijenu", "error");
                         return;
                     }else if(parseFloat(novaCijena).toFixed(2) < 0.00 || parseFloat(novaCijena).toFixed(2) > 9999.99){
                 
-                        alert("Cijena mora biti između 0 i 9999.99 HRK");
+                        swal("Neispravni podatci", "Cijena mora biti između 0 i 9999.99 HRK", "error");
                         return;
                     }
 
@@ -1140,7 +1173,7 @@
                         success: function(res){
                             if(!res){
                                 //internal error
-                                alert("Greška pri promjeni cijene.");
+                                swal("Greška!", "Greška pri promjeni cijene.", "error")
                                 ajaxLoad.fadeOut(50);
                                 $savechangeButton.prop("disabled", false);
                             }
@@ -1157,6 +1190,7 @@
 
                 });
             </script>
+
 
         </div>
     </div>
